--- a/style.css
+++ b/style.css
@@ -335,6 +335,27 @@
   background-color: #e7bebe;
 }
 
+.wrapper-content-white__github {
+  font-size: 55px;
+  letter-spacing: 0.1em;
+}
+
+.wrapper-content-white__github-link {
+  text-decoration: none;
+  background-color: #e7bebe;
+  width: 100%;
+  color: #524f4f;
+  display: block;
+  text-align: center;
+  -webkit-transition: all 0.6s;
+  transition: all 0.6s;
+}
+
+.wrapper-content-white__github-link:hover {
+  background-color: #524f4f;
+  color: #e7bebe;
+}
+
 @media (min-width: 320px) and (max-width: 768px) {
   .header__wrapper {
     -webkit-box-orient: vertical;
